...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/post_creation_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:backgroundTint="@color/fui_transparent"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_arrow_back" />
...
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:text="@string/select_the_tournament"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/post_creation_tournament_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:text="@string/select_the_run"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/post_creation_run_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/post_creation_post_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:text="@string/post" />

...
