<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/activity_main_drawer_main"
            android:title="Main Page" />
    </group>

    <item android:title="Other">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/activity_main_drawer_profile"
                    android:title="Profile" />
                <item
                    android:id="@+id/activity_main_drawer_settings"
                    android:title="Settings" />
            </group>
        </menu>
    </item>

</menu>